test/TestPhases/typechecker/invalid/OutputSupertype.blc
module

activity A(a: int64, b: float64)(x: int16, y: float32) returns bool
    repeat
        x = 12345
        y = 10.0
        await true
    end
    return false
end

activity main ()()
    var i: int32
    var d: float64
    cobegin
        var ll: int32
        let c: float32 = 4.2
        run _ = A(i, c)(ll, d)
    with weak
        repeat
            i = i + 5
            await true
        end
    with weak
        var x: float64
        repeat
            x = d * 2.0
            await true
        end
    end
end
